{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 6,
  "lineage": "0dcb4db3-d0e5-ee6c-7fee-78b286cf78ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraFull",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:851725258399:instance/i-09f2ca7ad4d05f992",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f2ca7ad4d05f992",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ffb72135c24d88df"
              }
            ],
            "primary_network_interface_id": "eni-0ffb72135c24d88df",
            "private_dns": "ip-172-31-26-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.118",
            "public_dns": "ec2-3-87-153-129.compute-1.amazonaws.com",
            "public_ip": "3.87.153.129",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067b35e0a45bf7065",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraFull_SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a071ef02ad004452",
            "tags": {
              "Name": "terraFull"
            },
            "tags_all": {
              "Name": "terraFull"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e3a7d9b64ab0af2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "i-09f2ca7ad4d05f992",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraFull"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraFull",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group/sg-08e3a7d9b64ab0af2",
            "description": "FullSecurityGroup",
            "egress": [],
            "id": "sg-08e3a7d9b64ab0af2",
            "ingress": [],
            "name": "terraFull_SG",
            "name_prefix": "",
            "owner_id": "851725258399",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010d294594a20c7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sg-08e3a7d9b64ab0af2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-0cfee73a298788dc0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cfee73a298788dc0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08e3a7d9b64ab0af2",
            "security_group_rule_id": "sgr-0cfee73a298788dc0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-0cfee73a298788dc0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraFull"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-0e44d8d7d68592988",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e44d8d7d68592988",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08e3a7d9b64ab0af2",
            "security_group_rule_id": "sgr-0e44d8d7d68592988",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-0e44d8d7d68592988",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraFull"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-0733f712910a32763",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0733f712910a32763",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08e3a7d9b64ab0af2",
            "security_group_rule_id": "sgr-0733f712910a32763",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-0733f712910a32763",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraFull"
          ]
        }
      ]
    }
  ]
}